# rust-admin

./: .env  .gitignore  Cargo.toml  package-lock.json
api/: Cargo.toml
casbin-adapter/: Cargo.toml
casbin-adapter/src/: action.rs  adapter.rs  entity.rs  ext.rs  lib.rs  migration.rs
data/log/: app_log.2024-02-02-09  app_log.2024-02-04-02  app_log.2024-02-04-07  app_log.2024-02-04-08  app_log.2024-02-06-04  app_log.2024-04-23-10  app_log.2024-04-24-01  app_log.2024-04-25-08  app_log.2024-04-25-09  app_log.2024-04-26-07  app_log.2024-04-26-08
db/migrations/: 20240204030922_init_db.sql
entity/: Cargo.toml
entity/src/: cipher_slot.rs  lib.rs  sys_menu.rs  sys_role.rs  sys_user.rs
resource/config/: application.yaml
resource/db/: sqlite.db  sqlite.db-shm  sqlite.db-wal
service/: Cargo.toml
src/: config.rs  constants.rs  context.rs  error.rs  log.rs  main.rs  middleware.rs
src/domain/: mappers.rs  mod.rs  tables.rs
src/middleware/: casbin.rs  mod.rs
src/util/: jwt.rs  res.rs
