[package]
name = "rust-admin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0"
axum-server = { version = "0.6", features = ["tls-rustls"] }
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }

tracing ="0.1"
tracing-appender = "0.2"
tracing-subscriber = {version = "0.3", features = ["json", "env-filter", "local-time", "registry"]}
rolling-file = "0.2"
time = { version = "*", features = ["macros"] }

serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.75"
lazy_static = "1.4.0"
serde_yaml = "0.8.23"
schemars = "0.8.8"
figment = { version = "0.10", features = ["yaml"]}

once_cell = "1"