[package]
name = "casbin-adapter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { version = "0.1", default-features = false }
casbin = { version = "2.2", default-features = false, features = ["runtime-tokio", "logging", "incremental", "cached"] }
sea-orm = { version = "0.12", features = ["runtime-tokio-rustls", "macros", "debug-print"] }